# OpenTrade.ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
cli/: main.py
docs/: README.md  architecture.md  configuration.md  usage.md
src/opentrade_ai/: __init__.py  config.py  report.py  screener.py
src/opentrade_ai/agents/: __init__.py  base.py  bear_researcher.py  bull_researcher.py  fundamental_analyst.py  news_analyst.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py  trader.py  verifier.py
src/opentrade_ai/analysis/: technical_indicators.py
src/opentrade_ai/data/: google_news.py  google_trends.py  market_data.py  sec_edgar.py
src/opentrade_ai/graph/: trading_graph.py
src/opentrade_ai/llm/: provider.py
tests/: conftest.py  test_agents.py  test_config.py  test_data_sources.py  test_llm_provider.py  test_market_data.py  test_report.py  test_screener.py  test_technical_indicators.py  test_trading_graph.py  test_verifier.py
